# Transaction-Assistant

./: .env  README.md  index.html  package.json  pyproject.toml
Bot/: experminents.ipynb  rag.py
src/: App.jsx  index.css
src/components/: BalanceCard.jsx  ChatBot.jsx  FilterChips.jsx  SearchBar.jsx  StatsRow.jsx  TransactionItem.jsx  TransactionList.jsx
src/data/: transactions.json
src/pages/: DetailsPage.jsx  HomePage.jsx
src/utils/: formatters.js
