[project]
name = "paybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-groq",
    "langchain-huggingface",
    "python-dotenv",
    "sentence-transformers",
    "fastapi",
    "faiss"
]
